Added background og endret farge til orange.

--- a/Prosjekt/HTML/background.css
+++ b/Prosjekt/HTML/background.css
@@ -1,4 +1,6 @@
-head, body
+body
 {
-	background: url(../Resources/background.jpg);
+	background: url("../Resources/background.jpg") no-repeat;
+	color: orange;
 }
+
