--- a/Prosjekt/HTML/Pagedesign.css
+++ b/Prosjekt/HTML/Pagedesign.css
@@ -1,3 +1,15 @@
+img
+{
+	max-width: 100%;
+	max-height: 100%;
+}
+
+html
+{
+	padding-right: 50px;
+	padding-left: 50px;
+}
+
 .container
 {
 	float: left;
