--- a/Prosjekt/HTML/background.css
+++ b/Prosjekt/HTML/background.css
@@ -1,7 +1,8 @@
 body
 {
-	background: url("../Resources/background.jpg") no-repeat;
+	background: url("../Resources/test.png") no-repeat;
 	color: #AAC7FD;
 	font-family: arial;
+
 }
 
