--- a/Prosjekt/HTML/Pagedesign.css
+++ b/Prosjekt/HTML/Pagedesign.css
@@ -13,12 +13,12 @@ html
 
 .container
 {
-	float: left;
+	margin-left: -15%;
 	display: block;
 	text-align: justify left;
 	width: 260px;
-	margin-left: 20px;
 	border: solid 2px;
+	float: left;
 }
 
 .fakter
@@ -29,19 +29,18 @@ html
 
 .post-title
 {
-	margin-left: 20px;
 	font-family: Arial black;
 	font-weight: bold;
 	font-size: 100%;
+	margin-left: -15%;	
 }
 
 
 .noekkelord
 {
-	margin-left: 20px;
+	margin-left: 30%;
 	display: block;
-	width: 700px;
-	float:left;
+	width: 100%;
 }
 
 @media screen and (max-width:960px)
