--- a/Prosjekt/HTML/Pagedesign.css
+++ b/Prosjekt/HTML/Pagedesign.css
@@ -40,23 +40,23 @@ html
 {
 	margin-left: 30%;
 	display: block;
-	width: 100%;
+	width: 120%;
 }
 
-@media screen and (max-width:960px)
+@media screen and (max-width:900px)
 {	
 	.container
 	{
 		width:260px;
-		margin-left: 0px;
-	}
-
-	.noekkelord
-	{
-		width:200%;
-		margin-left: 0px;
+		margin-left: -15%;
 	}
 	
+	.noekkelord
+	{
+		width: 200%;
+		float:left;
+		margin-left: -15%;
+	}
 }
 
 @media screen and (max-width:743px)
