--- a/Prosjekt/HTML/mainpage.css
+++ b/Prosjekt/HTML/mainpage.css
@@ -1,5 +1,8 @@
 
-
+html
+{
+	font-size: 90%;
+}
 /* Denne delen er for navigasjonsknapper*/
 .navigation
 {
@@ -72,6 +75,7 @@
 	width: 700px;
 	float: left;
 	margin: 0 auto 0 auto;
+	font-size: 16px;
 }
 
 .sidebar
@@ -80,6 +84,7 @@
 	float: right;
 	background-color: lightblue;
 	min-height: 1000px;
+	font-size: 16px;
 }
 
 .footer
@@ -89,6 +94,7 @@
 	height: 40px;
 	text-align: center;
 	padding:10px;
+	font-size: 16px;
 }
 
 
@@ -121,3 +127,88 @@
 	transition:all 0.5s;
 }
 
+/* 
+	Oppløsning design for mindre oppløsninger 
+	Denne brukes for alle plateformer og iphone 6s plus
+*/
+@media screen and (max-width: 959px)
+{
+	.navigation
+	{
+		width: 70%;
+	}
+	.wrapper
+	{
+		width: 70%;
+		margin-left: 15%;
+	}
+	.content
+	{
+		display:block;
+		float:left;
+	}
+	.sidebar
+	{	
+		width: 100%;
+		float:left;
+	}
+	#search
+	{
+		width: 80%;
+	}
+}
+
+/* 
+	En oppløsning for 799 - 500 px 
+	Denne kan brukes til Iphone SE
+*/
+@media screen and (max-width: 799px)
+{
+	.wrapper
+	{
+		width: 500px;
+		margin-left: 5%;
+	}	
+
+	.navigation
+	{
+		width: 500px;
+		margin-left: 5%;
+	}
+
+	.heading
+	{
+		height: auto;
+	}
+}
+
+/* 
+	Oppløsningen som brukes til Ipod touch og Iphone 5.
+*/
+
+@media screen and (max-width: 399px)
+{
+	.navigation
+	{
+		width:300px;
+		margin-left: -2%;
+	}
+	.navigation ul li
+	{
+		display:block;
+	}
+	.wrapper
+	{
+		width: 300px;
+		margin-left: -2%;
+	}
+
+	html
+	{
+		font-size: 130%;
+	}
+	#search
+	{
+		width:200px;
+	}
+}
