--- a/Prosjekt/CSS/mainpage.css
+++ b/Prosjekt/CSS/mainpage.css
@@ -148,26 +148,25 @@ html
 {
 	.navigation
 	{
-		width: 70%;
+		width: 960px;
 	}
 	.wrapper
 	{
-		width: 70%;
-		margin-left: 15%;
+		width: 960px;
 	}
 	.content
 	{
+		width:60%;
 		display:block;
 		float:left;
 	}
-	.sidebar
+	.rightbar, .leftbar
 	{	
-		width: 100%;
-		float:left;
+		width: 20%;
 	}
 	#search
 	{
-		width: 80%;
+		width: 65%;
 	}
 }
 
