--- a/Prosjekt/CSS/mainpage.css
+++ b/Prosjekt/CSS/mainpage.css
@@ -266,6 +266,28 @@ html
 	float:left;
 }
 
+/* Rating system*/
+.rating
+{
+	float:left;
+	unicode-bidi: bidi-override;
+	direction: rtl;
+}
+
+.rating > span
+{
+	display:inline-block;
+	position: relative;
+	width: 1.1em;
+}
+
+.rating > span:hover:before, .rating > span:hover ~ span:before
+{
+	content: "\2605";
+	position: absolute;
+	color: #ffcc00;
+}
+
 /***********************************************************************************/
 
 /* Søkresultat */
