Trailer er lagt til på mi.html

--- a/Prosjekt/CSS/mainpage.css
+++ b/Prosjekt/CSS/mainpage.css
@@ -243,6 +243,12 @@ html
 		margin-left: 28%;
 		margin-right: 30%;
 	}
+
+	.trailer
+	{
+		width: 300px;
+		height: 169px;
+	}
 }
 
 /*************************************************************************************/
@@ -288,6 +294,11 @@ html
 	color: #ffcc00;
 }
 
+.trailer
+{
+	float:left;
+}
+
 /***********************************************************************************/
 
 /* Søkresultat */
@@ -300,6 +311,7 @@ html
 
 .column
 {
+	display: block;
 	float:left;
 }
 
