fikset litt på kommentar før levering.

--- a/Prosjekt/CSS/mainpage.css
+++ b/Prosjekt/CSS/mainpage.css
@@ -146,6 +146,7 @@ html
 	padding-left: 10%;
 }
 
+/*''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''*/
 /* 
 	Oppløsning design for oppløsninger som er mindre enn 1280 
 	Denne brukes for alle plateformer og iphone 6s plus
@@ -268,7 +269,7 @@ html
 	}
 }
 
-/*************************************************************************************/
+/*********************************** design av innholdet ***********************************************/
 
 .hovedbildet
 {
